# urlcleansebot

./: .editorconfig  .env.example  .gitattributes  .gitignore  .replit  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_REPORT.md  FIXES.md  IMPROVEMENTS.md  IMPROVEMENT_REPORT.md  INTEGRATION_GUIDE.rs  Justfile  LANGUAGES.md  LICENSE  NOTICE  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_IMPROVEMENTS_2026.md  RECOMMENDATIONS_2026_05.md  SECURITY.md  SESSION_IMPROVEMENTS_2026_05.md  SUPPORT.md  backup_db.sh  build.sh  clippy.toml  compose.yml  crontab.example  deny.toml  podman-deploy.sh  render.yaml  rustfmt.toml  setup.sh
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  fuzz.yml  osv-scanner.yml  outdated.yml  pr-title.yml  release.yml  rust-clippy.yml  scorecard.yml  stale.yml  typos.yml
benches/: entropy.rs  sanitization.rs
docs/: ARCHITECTURE.md  DATABASE_OPTIMIZATION.md  DEPLOYMENT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: url_parser.rs
proptest-regressions/sanitizer/: normalize.txt
src/: bot.rs  config.rs  constants.rs  health.rs  http_utils.rs  i18n.rs  lib.rs  logging.rs  main.rs  metrics.rs  security.rs
src/application/: mod.rs
src/application/commands/: handlers.rs
src/application/queries/: handlers.rs  mod.rs
src/application/services/: mod.rs
src/db/: implementation.rs  models.rs
src/db/migrations/: 001_initial_schema.sql  002_indexes.sql
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/i18n/: ar.rs  de.rs  en.rs  es.rs  fr.rs  hi.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs  tr.rs  zh.rs
src/infrastructure/repositories/: mod.rs
src/presentation/telegram/: command_dispatcher.rs  commands.rs  commands_tests.rs  handlers.rs  helpers.rs  mod.rs  security_scan.rs  settings.rs  tests.rs
src/presentation/telegram/handlers/: callback.rs  inline.rs  message.rs  mod.rs
src/redirects/: cache.rs  mod.rs  models.rs  service.rs
src/sanitizer/: aggressive.rs  ai_engine.rs  classifier.rs  entropy.rs  honor_creator.rs  linkumori.rs  mod.rs  multi_source.rs  normalize.rs  pipeline.rs  rule_engine.rs  validation.rs
src/sanitizer/rule_engine/: clearurls.rs  expand.rs  github.rs  mod.rs  redact.rs  ssrf.rs
src/shared/: error.rs  error_handling.rs  mod.rs  security.rs  types.rs  url_processor.rs  validation.rs
src/shared/ports/: ai.rs  database.rs  mod.rs  redirect.rs  sanitizer.rs
tests/: README.md  bot_commands_tests.rs  database_tests.rs  sanitizer_tests.rs  trait_tests.rs  wiremock_tests.rs
tests/common/: mod.rs
