[package]
name = "clear_urls_bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
default-run = "clear_urls_bot"

[dependencies]
# Tokio with only needed features (instead of "full")
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
teloxide = { version = "0.17", default-features = false, features = ["macros", "webhooks", "webhooks-axum", "ctrlc_handler", "rustls"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "uuid", "any"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"], default-features = false }
regex = "1.11"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
whatlang = "0.18.0"
moka = { version = "0.12.12", features = ["future"] }
base64 = "0.22"
log = "0.4"
once_cell = "1.19"
percent-encoding = "2.3.2"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
incremental = false
panic = "abort"
opt-level = "z"
overflow-checks = false
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = 1  # Keep some debug info for profiling

[profile.dev]
# Faster development builds with better optimization
opt-level = 1
debug = 0  # Minimal debug info for fastest compilation
incremental = true
overflow-checks = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for better runtime performance
opt-level = 2
