[package]
name = "url_cleanse_bot-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.url_cleanse_bot]
path = ".."

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "url_parser"
path = "fuzz_targets/url_parser.rs"
test = false
doc = false
bench = false
